# GiAtlas

./: Dockerfile  LICENSE  README.md  compose.debug.yaml  compose.yaml  pyproject.toml
client/: Dockerfile  README.md  package-lock.json  package.json
client/src/: App.tsx
src/python/: main.py  pyproject.toml
webserver/: Dockerfile  pyproject.toml
webserver/src/python/: basicdb.py  basicplotutil.py  main.py  mlinject.py  pyproject.toml
webserver/src/python/db/: basicdb.py  util.py
webserver/src/python/db/entities/: index.py
webserver/src/python/db/stored_proc/: indexing.py
