[tool.poetry]
name = "giatlas"
version = "0.1.0"
description = ""
authors = ["liammccall <liamkm895@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^1.1.1"
flask = "^3.1.2"
matplotlib = "^3.10.7"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
