[tool.poetry]
name = "giatlas"
version = "0.1.0"
description = ""
authors = ["liammccall <liamkm895@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^1.1.1"
flask = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
